--- a/index.jade
+++ b/index.jade
@@ -2,6 +2,7 @@ link(rel='stylesheet', href='bower_components/bootstrap/dist/css/bootstrap.min.c
 
 script(type='text/javascript', src='bower_components/angular/angular.js')
 script(type='text/javascript', src='/app/app.js')
+script(type='text/javascript', src='bower_components/angular-resource/angular-resource.js')
 
 body(ng-app='app')
   .container
